--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,13 @@
     <noscript>
         This page requires Javascript being active, in order to run properly.
     </noscript>
+    <nav>
+        <h1>Andrzej Kopec </h1>
+        <a href="about">O mnie</a>
+        <a href="cats">Kategorie</a>
+        <a href="">Newsletter</a>
+        <a href="contact">Kontakt</a>
+    </nav>
     
     <div id="main">
 
