first styling of navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,11 +20,18 @@
         This page requires Javascript being active, in order to run properly.
     </noscript>
     <nav>
-        <h1>Andrzej Kopec </h1>
-        <a href="about">O mnie</a>
-        <a href="cats">Kategorie</a>
-        <a href="">Newsletter</a>
-        <a href="contact">Kontakt</a>
+        <div class="logo">Andrzej Kopec</div>
+        <div class="menu">
+            <a href="about">O mnie</a>
+            <a href="cats">Kategorie</a>
+            <a href="newsletter">Newsletter</a>
+            <a href="contact">Kontakt</a>
+        </div>
+        <div class="menu-trigger">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
     </nav>
     
     <div id="main">
