--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,8 @@
     <div id="main">
 
     </div>
-    <script src="menu.js"></script>
+    <script src="js/post.js"></script>
+    <script src="js/main.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
